tests/ui/consts/array-repeat-expr-not-const.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/array-repeat-expr-not-const.rs:7:22
   |
LL |     fn create_array(n: usize) {
   |                     - this would need to be a `const`
LL |         let _x = [0; n];
   |                      ^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0435`.
